--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -1,9 +1,13 @@
 name: verify
 
-on: push
+on:
+  pull_request:
+  push:
+    branches:
+      - master
 
 jobs:
-  verify:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -11,65 +15,23 @@ jobs:
 
     - name: Set up Python
       uses: actions/setup-python@v1
+    
+    - name: Install boost
+      run: sudo apt install -y libboost-dev
 
     - name: Install dependencies
       run: pip3 install -U online-judge-verify-helper
 
+    - name: Clone AC Library
+      run: cd ${GITHUB_WORKSPACE}/../ && git clone https://github.com/atcoder/ac-library.git
 
-    # required only if you want to verify Haskell code
-    - name: Install dependencies (Haskell)
-      uses: actions/setup-haskell@v1
-
-    # required only if you want to verify Java code
-    - name: Install dependencies (Java)
-      uses: actions/setup-java@v1
-      with:
-        java-version: 11
-
-    # required only if you want to verify C# script files
-    - uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: '3.1.101'
-    - name: Install dependencies (C#)
-      run: dotnet tool install -g dotnet-script
-
-    # required only if you want to verify Go code
-    - name: Install dependencies (Go)
-      uses: actions/setup-go@v2
-
-    # required only if you want to verify Ruby code
-    - name: Install dependencies (Ruby)
-      uses: actions/setup-ruby@v1
-
-    # required only if you want to verify Nim code
-    - name: Install dependencies (Nim)
-      run: sudo apt install nim
-
-    - name: Set up Rust (1.42.0)
-      uses: actions-rs/toolchain@v1
-      with:
-        toolchain: 1.42.0-x86_64-unknown-linux-gnu
-        default: true
-        profile: minimal
-
-    # required by cargo-udeps
-    - name: Set up Rust (nightly)
-      uses: actions-rs/toolchain@v1
-      with:
-        toolchain: nightly-x86_64-unknown-linux-gnu
-        default: true
-        profile: minimal
-
-    # required only if you set `languages.rust.list_dependencies_backend.kind` to `"cargo-udeps"`
-    - name: Install cargo-udeps for Rust
-      uses: actions-rs/install@v0.1
-      with:
-        crate: cargo-udeps
-        use-tool-cache: true
+    - name: Add AC Library to CPLUS_INCLUDE_PATH
+      run: echo "CPLUS_INCLUDE_PATH=$CPLUS_INCLUDE_PATH:${GITHUB_WORKSPACE}/../ac-library" >> $GITHUB_ENV
 
     - name: Run tests
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        YUKICODER_TOKEN: ${{ secrets.YUKICODER_TOKEN }}
         GH_PAT: ${{ secrets.GH_PAT }}
-      run: oj-verify all
+        YUKICODER_TOKEN: ${{ secrets.YUKICODER_TOKEN }}
+        DROPBOX_TOKEN: ${{ secrets.DROPBOX_TOKEN }}
+      run: oj-verify all --jobs 2
