--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -1,9 +1,13 @@
 name: verify
 
-on: push
+on:
+  pull_request:
+  push:
+    branches:
+      - master
 
 jobs:
-  verify:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -11,35 +15,17 @@ jobs:
 
     - name: Set up Python
       uses: actions/setup-python@v1
+    
+    - name: Install boost
+      run: sudo apt install -y libboost-dev
 
     - name: Install dependencies
       run: pip3 install -U online-judge-verify-helper
 
-    - name: Set up Rust (1.42.0)
-      uses: actions-rs/toolchain@v1
-      with:
-        toolchain: 1.42.0-x86_64-unknown-linux-gnu
-        default: true
-        profile: minimal
-
-    # required by cargo-udeps
-    - name: Set up Rust (nightly)
-      uses: actions-rs/toolchain@v1
-      with:
-        toolchain: nightly-x86_64-unknown-linux-gnu
-        default: true
-        profile: minimal
-
-    # required only if you set `languages.rust.list_dependencies_backend.kind` to `"cargo-udeps"`
-    - name: Install cargo-udeps for Rust
-      uses: actions-rs/install@v0.1
-      with:
-        crate: cargo-udeps
-        use-tool-cache: true
-
     - name: Run tests
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        YUKICODER_TOKEN: ${{ secrets.YUKICODER_TOKEN }}
         GH_PAT: ${{ secrets.GH_PAT }}
-      run: oj-verify all
+        YUKICODER_TOKEN: ${{ secrets.YUKICODER_TOKEN }}
+        DROPBOX_TOKEN: ${{ secrets.DROPBOX_TOKEN }}
+      run: oj-verify all --jobs 2
