--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -28,4 +28,4 @@ jobs:
         GH_PAT: ${{ secrets.GH_PAT }}
         YUKICODER_TOKEN: ${{ secrets.YUKICODER_TOKEN }}
         DROPBOX_TOKEN: ${{ secrets.DROPBOX_TOKEN }}
-      run: oj-verify all
+      run: oj-verify all --jobs 2
