--- a/_config.yml
+++ b/_config.yml
@@ -5,5 +5,5 @@ exclude:
 plugins:
 - jemoji
 - jekyll-redirect-from
-theme: jekyll-theme-hacker
+theme: jekyll-theme-minimal
 title: Felix's Library
